--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -38,7 +38,7 @@
                 android:layout_height="50dp"
                 android:onClick="@{(view) -> itemViewModel.onLikeClicked(view)}"
                 android:padding="8dp"
-                android:src="@drawable/ic_like_empty" />
+                android:src="@{itemViewModel.isClicked == false ? @drawable/ic_like_empty:@drawable/ic_like}" />
 
             <ImageView
                 android:layout_width="50dp"
