Implemented item card for feed.

--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -6,8 +6,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="itemViewModel"
-            type="com.learn_kotlin.viewmodel.CardViewModel" />
+            name="feed"
+            type="com.learn_kotlin.model.Feed" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,9 +36,9 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:onClick="@{(view) -> itemViewModel.onLikeClicked(view)}"
+                android:id="@+id/image_like"
                 android:padding="8dp"
-                android:src="@{itemViewModel.isClicked == false ? @drawable/ic_like_empty : @drawable/ic_like}" />
+                android:src="@{feed.like == false ? @drawable/ic_like_empty : @drawable/ic_like}" />
 
             <ImageView
                 android:layout_width="50dp"
